# DevOps-projects-portfolio

./: .gitignore  README-David.md  README-Screenshots.md  README.md
DevOps-Project-Portfolio-Module15-Ansible-AWS/: .gitignore  README.md
Module-7-Docker-Nexus-Demo/: README.md  command-David.md
module-05-cloud-iaas/: README-David.md
module-06-nexus-repo-manager/: README.md
module-07-docker-containers/: README-David.md
module-08-jenkins-ci-cd/: README-David.md
module-09-aws-services/: README.md
module-10-kubernetes/: README.md
module-11-eks/: README.md
module-11-kubernetes-eks/: README-David.md  README.md
module-12-eks-terraform/: main.tf  providers.tf  variables.tf
module-12-terraform/: -David.gitignore  Jenkinsfile  Makefile-David  README-David.md  main.tf
module-12-terraform-complete/: README.md
module-13-programming-python/: .gitignore  README.md
module-13-programming-python/projects/gitlab_repo_auditor/: README-David.md  pyproject.toml
module-13-programming-python/projects/gitlab_repo_auditor/src/gitlab_repo_auditor/: app-David.py
module-13-programming-python/projects/gitlab_repo_auditor/tests/: test_gitlab_api_mocked.py
module-13-programming-python/projects/release_notes_generator/: README-David.md  pyproject.toml
module-13-programming-python/projects/release_notes_generator/sample/: changelog.csv
module-13-programming-python/projects/release_notes_generator/src/release_notes_generator/: app-David.py
module-13-programming-python/projects/release_notes_generator/tests/: test_normalize-David.py
module-5-cloud-iaas/: README.md
(+240 files in other folders)
