[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-repo-auditor"
version = "0.1.0"
description = "Audit a GitLab user's public repos (portfolio project)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests"]

[project.scripts]
gitlab-audit = "gitlab_repo_auditor.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
