[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "release-notes-generator"
version = "0.1.0"
description = "Generate release notes from a changelog spreadsheet (portfolio project)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas", "openpyxl"]

[project.scripts]
release-notes = "release_notes_generator.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
